--- a/index.html
+++ b/index.html
@@ -34,36 +34,34 @@
             <h3 class="reveal left">Hello, It's Me</h3>
             <h1 class="reveal left">Comfort</h1>
             <h3 class="reveal left"> And am a <span class="multi_text"></span></h3>
-            <p class="reveal left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium fugiat quo
-                obcaecati vel nesciunt minus autfdrs soluta sapiente, unde fugit.</p>
+            <p class="reveal left">I'm Comfort, populary known as DeFi_WordSmith. Am  a content Writer, defi analyst,   abassador, ghost writer for many Brands.</p>
             <div class="social-media">
                 <a href="#" class="reveal left" data-name="left"><img src="images/svg/discord.svg" alt=""></a>
                 <a href="#" class="reveal left" data-name="left"><img src="images/svg/twitter.svg" alt=""></a>
                 <a href="#" class="reveal left" data-name="left"><img src="images/svg/whatsapp.svg" alt=""></a>
                 <a href="#" class="reveal left" data-name="left"><img src="images/svg/tiktok.svg" alt=""></a>
             </div>
-            <button class="btn" onclick="popup()"><a href="#">Download CV</a></button>
+            <!-- <button class="btn" onclick="popup()"><a href="#">Download CV</a></button> -->
         </div>
 
         <div class="home_img">
-            <img src="images/port_8.jpeg" class="reveal right" alt="" draggable="false">
+            <img src="images/vic.jpg" class="reveal right" alt="" draggable="false">
         </div>
     </section>
 
     <!-- ====about section==== -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="images/port_10.jpeg" alt="">
+            <img src="images/vic.jpg" alt="">
         </div>
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3>DeFi_WordSmith</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, est vitae unde neque, eos culpa totam
-                fuga minus nam quibusdam, delectus dolor quod ad. Optio quis quasi autem necessitatibus facilis ducimus
-                hic saepe pariatur sequi, eius temporibus modi a, excepturi soluta quisquam voluptate esse consectetur
-                atque et explicabo, qui beatae Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
-                perspiciatis laudantium odit dolores harum ad tenetur tempora deleniti, illum, unde, nihil saepe
-                temporibus veritatis animi accusantium ipsum sit eos possimus.. lorem30
+            <p>
+
+                I'm comfort, I have been in web3 space for 2 years. My years of spending in web3 I have been creating content on binance, help project like SMATh World with collaboration to meet their investors, I have help rhino samurai in managing their community properly, helped crazy pablo went from 20 - 250 just with the space of two weeks.
+                
+                Creating value has been what I have been doing, helping my audience and onboarding new people in DeFi.
 
             </p>
             <button class="btn"><a href="#contact">Let's Talk</a></button>
@@ -75,46 +73,25 @@
         <h2 class="heading">Our <span>Service!</span> </h2>
         <div class="service_container">
             <div class="service_box">
-                <h3>Content Creation</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod aliquam enim aut eligendi facilis quasi
-                    ipsam natus suscipit, repudiandae temporibus at cumque! Nostrum, quos libero! Aliquid eos minus
-                    atque veniam?.</p>
+                <h3>Content Writer</h3>
+                <p>As a content writer, my roles involves developing engaging and relevant content for a specific audience. My aim to capture attention, convey information, and potentially build a community around my content. Adaptability and staying attuned to my audience's preferences are key aspects of my job.</p>
             </div>
             <div class="service_box">
-                <h3>Project Adivisor</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident sunt, id animi error explicabo
-                    optio corporis similique saepe, sequi fugit minus libero, adipisci laudantium quis quae harum
-                    consequuntur accusamus odit.</p>
+                <h3>Ghost Writer</h3>
+                <p>As a ghostwriter for brands, I craft written content on behalf of the brand without being credited. My focus is on aligning the content with the brand's voice, values, and goals. It include anything from blog posts and articles to social media content and marketing materials. My role requires a deep understanding  and effective communication skills for the brand.</p>
             </div>
             <div class="service_box">
-                <h3>Ghost Writing</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam, minus cumque ratione rem, possimus
-                    suscipit cupiditate dolore laborum, tempore eligendi aliquam quis soluta reprehenderit? Architecto
-                    fuga amet sed omnis ea.</p>
+                <h3>Ambassador</h3>
+                <p>As an ambassador, my role involves representing and promoting a brand, organization, or cause. I attend events, engaging with the community, and effectively communicating the values and messaging of the brand. My  aim is to enhance visibility, build trust, and contribute to the overall positive image of the entity you represent.</p>
             </div>
             <div class="service_box">
                 <h3>Defi Analyst</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro suscipit, quos eos molestias
-                    exercitationem aliquam voluptas nemo velit veniam asperiores, officia enim ipsa impedit. Neque,
-                    deserunt porro. Tempora, provident cumque?.</p>
+                <p>As a DeFi analyst, I evaluate decentralized finance projects, assess risks, analyze market trends, and provide insights to make informed investment decisions. My role also involve staying updated on blockchain technology and understanding the dynamics of various decentralized financial instruments.</p>
             </div>
-            <div class="service_box">
-                <h3>Community Manager</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo eos expedita ducimus aspernatur
-                    consequatur, perferendis, commodi dolorem at illo cupiditate magnam molestias, rerum accusamus
-                    laboriosam minus dignissimos officia reprehenderit porro..</p>
-            </div>
-            <div class="service_box">
-                <h3>Project Marketar</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero praesentium at dolorum quidem sit
-                    impedit illo, sint inventore nesciunt quia perspiciatis exercitationem blanditiis facilis veniam
-                    temporibus distinctio dignissimos voluptatum? Architecto?.</p>
-            </div>
+           
 
         </div>
     </section>
-
-
 
     <!-- portfolio section -->
     <section class="portfolio" id="portfolio">
@@ -123,37 +100,37 @@
             <div class="portfolio_box">
                 <img src="images/port_16.jpeg" alt="">
                 <div class="portfolio_name">
-                    <h4>Crazy pablo</h4>
+                    <h4>Crazy pablo (Content Writer)</h4>
                 </div>
             </div>
             <div class="portfolio_box">
                 <img src="images/port_13.jpeg" alt="">
                 <div class="portfolio_name">
-                    <h4>Smarth world</h4>
+                    <h4>Smarth world (Collab Manager)</h4>
                 </div>
             </div>
             <div class="portfolio_box">
                 <img src="images/port_14.jpeg" alt="">
                 <div class="portfolio_name">
-                    <h4>Rianno Samurai</h4>
+                    <h4>Rianno Samurai (Community Manager)</h4>
                 </div>
             </div>
             <div class="portfolio_box">
-                <img src="images/port_14.jpeg" alt="">
+                <img src="images/t_5estimony.jpg" alt="">
                 <div class="portfolio_name">
-                    <h4>Rianno Samurai</h4>
+                    <h4>Content Marketer</h4>
                 </div>
             </div>
             <div class="portfolio_box">
-                <img src="images/port_14.jpeg" alt="">
+                <img src="images/mahek.jpg" alt="">
                 <div class="portfolio_name">
-                    <h4>Rianno Samurai</h4>
+                    <h4>Abassadorship</h4>
                 </div>
             </div>
             <div class="portfolio_box">
-                <img src="images/port_14.jpeg" alt="">
+                <img src="images/binance.jpg" alt="">
                 <div class="portfolio_name">
-                    <h4>Rianno Samurai</h4>
+                    <h4>Content Writer</h4>
                 </div>
             </div>
         </div>
@@ -208,7 +185,7 @@
     <script src="js/email.js"></script>
 
     <script type="text/javascript">
-        emailjs.init('4MHgB2U9K8R0r8vV9')
+        emailjs.init('dy76dkh6Hv370r2Mu')
     </script>
 
     <script>
@@ -242,7 +219,7 @@
                 from_name: frm.fullname.value,
             }
             // console.log(params);
-            emailjs.send('service_3bhr2or', 'template_z6fe2te', params)
+            emailjs.send('defi_word_smith_service', 'template_defi_word_smith', params)
                 .then(function () {
                     console.log('SUCCESS!');
                     preloader.className = "preloader"
