--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <h3 class="reveal left"> And am a <span class="multi_text"></span></h3>
             <p class="reveal left">I'm Comfort, populary known as DeFi_WordSmith. Am  a content Writer, defi analyst,   abassador, ghost writer for many Brands.</p>
             <div class="social-media">
-                <a href="#" class="reveal left" data-name="left"><img src="images/svg/discord.svg" alt=""></a>
-                <a href="#" class="reveal left" data-name="left"><img src="images/svg/twitter.svg" alt=""></a>
-                <a href="#" class="reveal left" data-name="left"><img src="images/svg/whatsapp.svg" alt=""></a>
-                <a href="#" class="reveal left" data-name="left"><img src="images/svg/tiktok.svg" alt=""></a>
+                <a href="https://discord.gg/comfortmetrics" class="reveal left" data-name="left"><img src="images/svg/discord.svg" alt=""></a>
+                <a href="https://twitter.com/comfort252" class="reveal left" data-name="left"><img src="images/svg/twitter.svg" alt=""></a>
+                <a href="https://wa.me/+2348168233395" class="reveal left" data-name="left"><img src="images/svg/whatsapp.svg" alt=""></a>
+                <a href="https://t.me/Comfort586" class="reveal left" data-name="left"><img src="images/svg/tiktok.svg" alt=""></a>
             </div>
             <!-- <button class="btn" onclick="popup()"><a href="#">Download CV</a></button> -->
         </div>
